--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
                 </p>
               </div>
             </div>
+            <h3 class="pt-2">Results:</h3>
           </div>
           
           </div>
