--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img src="images/logo-b.png" alt="logo" />
           </a>
           <a class="navbar-brand brand-logo-mini" href="index.html">
-            <img src="images/logo-mini.svg" alt="logo" />
+            <img src="images/logo-s.png" alt="logo" />
           </a>
         </div>
       </div>
@@ -49,7 +49,7 @@
           </li>
         </ul>
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item dropdown d-none d-lg-block">
+          <!-- <li class="nav-item dropdown d-none d-lg-block">
             <a class="nav-link dropdown-bordered dropdown-toggle dropdown-toggle-split" id="messageDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false"> Select Category </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list pb-0" aria-labelledby="messageDropdown">
               <a class="dropdown-item py-3" >
@@ -81,7 +81,7 @@
                 </div>
               </a>
             </div>
-          </li>
+          </li> -->
           <li class="nav-item d-none d-lg-block">
             <div id="datepicker-popup" class="input-group date datepicker navbar-date-picker">
               <span class="input-group-addon input-group-prepend border-right">
@@ -316,14 +316,14 @@
                 </div>
               </div>
             </div>
-            <div class="pt-3">
+            <div class="pt-5">
             <form>
               <div class="form-group">
                 <label for="exampleFormControlFile1">Input the patient's ECG data</label>
                 <input type="file" class="form-control-file bt" id="exampleFormControlFile1">
               </div>
             </form>
-            <a class="btn btn-block btn-primary auth-form-btn" href="">Submit Data</a>
+            <a class="btn btn-primary auth-form-btn" href="">Submit Data</a>
             <div class="clearfix"></div>
             <div class="pt-5 col-6">
               <div class="span4">
@@ -331,7 +331,7 @@
               <div class="progress">
                 <div class="progress-bar progress-lg " role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
               </div>
-                <p class="pt-2">
+                <p class="pt-3">
                   <button class="btn btn-primary" type="button">Analyze</button>
                   <button class="btn btn-mini" type="button">Cancel</button>
                 </p>
